test/functions/generic/poi/shadowing-field.good
shadowing-field.chpl:2: In module 'Main':
shadowing-field.chpl:4: error: parenless proc redeclares the field 'field'
